<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScándalOh!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mexico">México</string>
    <string name="argentina">Argentina</string>
    <string name="bolivia">Bolivia</string>
    <string name="chile">Chile</string>
    <string name="colombia">Colombia</string>
    <string name="costa_rica">Costa Rica</string>
    <string name="cuba">Cuba</string>
    <string name="ecuador">Ecuador</string>
    <string name="el_salvador">El Salvador</string>
    <string name="espania">España</string>
    <string name="guatemala">Guatemala</string>
    <string name="guinea_ecuatorial">Guinea Ecuatorial</string>
    <string name="honduras">Honduras</string>
    <string name="nicagarua">Nicaragua</string>
    <string name="panama">Panamá</string>
    <string name="paraguay">Paraguay</string>
    <string name="peru">Perú</string>
    <string name="puerto_rico">Puerto Rico</string>
    <string name="republica_dominicana">República Dominicana</string>
    <string name="uruguay">Uruguay</string>
    <string name="venezuela">Venezuela</string>
    <string name="url_foto">url foto</string>
    <string name="id">ID</string>
    <string name="uri_audio">uri audio</string>
    <string name="app_id">545857632158419</string>
    <string name="atras">&lt; Atrás</string>
    <string name="user">user</string>
    <string name="title">tite</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="iniciar_con_redes_sociales">Iniciar con redes sociales</string>
    <string name="crea_tu_cuenta">Crea tu cuenta</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="saltar">Saltar &gt;</string>
    <string name="iniciar_sesion_con">Iniciar sesión con</string>
    <string name="usuario_dospuntos">Usuario:</string>
    <string name="cuatro_veinticinco_caracteres">4-25 caracteres</string>
    <string name="email_dospuntos">Email:</string>
    <string name="ejemplo_arroba_email">ejemplo@email.com</string>
    <string name="contrasenia_dospuntos">Contraseña:</string>
    <string name="al_menos_seis_caracteres">Al menos 6 caracteres</string>
    <string name="crear">Crear</string>
    <string name="inicia_sesion">Inicia sesión</string>
    <string name="usuario_o_email_dospuntos">Usuario o email:</string>
    <string name="olvidaste_la_contrasenia">¿Olvidaste tu contraseña?</string>
    <string name="entrar">Entrar</string>
    <string name="titulo_dospuntos">Título:</string>
    <string name="categoria_dospuntos">Categoría:</string>
    <string name="humor">Humor</string>
    <string name="denuncia">Denuncia</string>
    <string name="subir_sin_audio">Subir sin audio</string>
    <string name="tiempo_restante_dospuntos">Tiempo restante:</string>
    <string name="seg">seg</string>
    <string name="grabar">Grabar</string>
    <string name="escribe_un_comentario">Escribe un comentario ...</string>
    <string name="introduce_el_email_con_el">Introduce el email con el que te registraste para recibir una nueva contraseña:</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="subiendo_scandaloh">Subiendo scándalOh!...</string>
    <string name="espera_por_favor">Espera, por favor</string>
    <string name="debes_introducir_primero">Debes introducir primero un título</string>
    <string name="quieres_aniadir_un_audio">¿Quieres añadir un audio?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="no_dispones_de_conexion">No dispones de conexión a internet</string>
    <string name="no_se_pudo_enviar_el_scandaloh">No se pudo enviar el scándalOh!</string>
    <string name="scandaloh_enviado_con_exito">scándalOh! enviado con éxito</string>
    <string name="error_enviando_el_scandaloh">Error enviando el scándalOh!</string>
    <string name="enviando_comentario">Enviando comentario ...</string>
    <string name="lo_sentimos_hubo">Lo sentimos, hubo un error inesperado</string>
    <string name="hubo_algun_error_enviando_comentario">Hubo algún error enviando el comentario</string>
    <string name="no_se_pudieron_obtener_comentarios">No se pudieron obtener los comentarios</string>
    <string name="perfil">Perfil</string>
    <string name="pais">País</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="ajustes">Ajustes</string>
    <string name="danos_tu_opinion">Danos tu opinión</string>
    <string name="hubo_algun_error_camara">Hubo algún error con la cámara</string>
    <string name="hacer_foto_con_camara">Hacer foto con la cámara</string>
    <string name="seleccionar_foto_galeria">Seleccionar foto de la galería</string>
    <string name="aniadir_foto">Añadir foto</string>
    <string name="este_dispositivo_no_dispone_camara">Este dispositivo no dispone de cámara</string>
    <string name="no_se_puede_acceder_camara">No se puede acceder a la cámara</string>
    <string name="audio_grabado_dospuntos">Audio grabado:</string>
    <string name="grabar">Grabar</string>
    <string name="grabando_audio">Grabando audio ...</string>
    <string name="parar">Parar</string>
    <string name="reproduciendo">Reproduciendo ...</string>
    <string name="introduce_un_email_valido">Introduce un email válido</string>
    <string name="solicitando_contrasenia">Solicitando contraseña ...</string>
    <string name="se_ha_enviando_un_email">Se ha enviado un email con la contraseña</string>
    <string name="este_email_no_esta_registrado">Este email no está registrado</string>
    <string name="hubo_algun_error_peticion">Hubo algún error en la petición</string>
    <string name="guardar_foto_galeria">Guardar foto en la galería</string>
    <string name="preparando_para_compartir">Preparando para compartir ...</string>
    <string name="deberias_ver_esto_que">Deberías ver esto. ¡Qué escándalo!</string>
    <string name="compartir_scandaloh_con">Compartir scándalOh! con...</string>
    <string name="guardando_dospuntos">Guardando ...</string>
    <string name="reportando_scandaloh">Reportando scándalOh! ...</string>
    <string name="report_enviado_correctamente">Foto reportada correctamente</string>
    <string name="esta_opcion_no_se_podra">Esta opción no se podrá cambiar en el futuro. ¿Estás seguro?</string>
    <string name="pais_elegido_dospuntos">País elegido: </string>
    <string name="autoreproduccion">Autoreproducción</string>
    <string name="usuario">Usuario</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="cierra_la_sesion_actual">Cierra la sesión actual del usuario</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="crea_una_cuenta_de_usuario">Crea una cuenta de usuario</string>
    <string name="inicia_sesion_en_una_cuenta">Inicia sesión en una cuenta de usuario</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="seguro_que_quieres_cerrar">¿Seguro que desea cerrar la sesión actual?</string>
    <string name="cerrar_sesion_usuario">Cerrar sesión usuario</string>
    <string name="confirmar">Confirmar</string>
    <string name="registrate_o_inicia_sesion">Regístrate o inicia sesión para agregar contenidos</string>
    <string name="iniciando_sesion">Iniciando sesión ...</string>
    <string name="sesion_iniciada_exito">Bienvenido de nuevo ;)</string>
    <string name="usuario_registrado_correctamente">Bienvenido ;)</string>
    <string name="este_campo_debe_tener_4_caracteres">Este campo debe tener al menos 4 caracteres</string>
    <string name="este_campo_no_permite_espacios">Este campo no permite espacios en blanco</string>
    <string name="este_campo_es_obligatorio">Este campo es obligatorio</string>
    <string name="registrando_usuario">Registrando usuario ...</string>
    <string name="introduce_una_direccion_email_valida">Introduce una dirección de email válida</string>
    <string name="este_campo_debe_tener_6">Este campo debe tener al menos 6 caracteres</string>
    <string name="lo_sentimos_se_ha_producido">Lo sentimos, se ha producido un error inesperado</string>
    <string name="compartir_escandalo">Compartir scándalOh!</string>
    <string name="reportar_escandalo">Reportar scándalOh!</string>
    <string name="selecciona_opcion">Selecciona opción</string>
    <string name="material_ofensivo">Material ofensivo</string>
    <string name="spam">Spam</string>
    <string name="copyright">Copyright</string>
    <string name="reportar_esta_foto_por">Reportar esta foto por</string>
    <string name="debes_iniciar_sesion_para_reportar">Debes iniciar sesión para reportar</string>   
    <string-array name="array_categorias">
        <item>Humor</item>
        <item>Denuncia</item>
    </string-array>
    <string name="reproduce_el_audio_automaticamente">Reproduce el audio automáticamente</string>
    <string name="ha_llegado_al_limite">Has llegado al límite de caracteres</string>
    <string name="comentarios">comentarios</string>
    <string name="comentario">comentario</string>
    <string name="inicia_sesion_para_comentar">Inicia sesión para comentar</string>
    <string name="nuevo_usuario">Nuevo usuario</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="ajustes">Ajustes</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="avatar">Avatar</string>
    <string name="actualizando_avatar">Actualizando avatar ...</string>
    <string name="hubo_algun_problema_actualizando_avatar">Hubo algún problema actualizando el avatar</string>
    <string name="invitado">Invitado</string>
    <string name="iniciar_sesion_con_twitter">Iniciar sesión con Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="scandaloh">ScandalOh</string>
    <string name="selecciona_pais">Selecciona país</string>
    <string name="inicia_sesion_para_comentar_este_escandalo">Inicia sesión para comentar este escándalo</string>
    <string name="may_notificaciones">Notificaciones</string>



</resources>
