<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lay_pantalla_main_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_inicio"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_weight="1.6"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical" >

        <com.facebook.widget.LoginButton
            android:id="@+id/but_log_in_facebook"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:text="Button"
            fb:login_text="@string/facebook"
            fb:logout_text="@string/facebook" />

        <Button
            android:id="@+id/but_log_in_scandaloh"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/blue_button_selector"
            android:text="@string/scandaloh"
            android:textColor="@color/blanco"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/txt_loginmain_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crea_tu_cuenta"
            android:textColor="@color/azul" />

    </LinearLayout>

</LinearLayout>