<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_pantalla_record_audio_dialog"
    android:layout_width="280dp"
    android:layout_height="320dp"
    android:background="@color/gris_claro"
    android:orientation="vertical"
    android:paddingBottom="23dp"
    android:paddingLeft="23dp"
    android:paddingRight="23dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_cancelar_foto_audio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:text="@string/cancelar"
                android:textColor="@color/azul"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:orientation="vertical"
            android:gravity="right" >

            <TextView
                android:id="@+id/txt_subir_foto_audio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|right"
                android:text="@string/aceptar"
                android:textColor="@color/azul"
                android:textSize="20dp"
                android:visibility="invisible" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical" >
        
        <View
            android:layout_width="wrap_content"
            android:layout_height="0.2dp"
            android:background="@color/gris_oscuro" 
         />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.8"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_recordar_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/tiempo_restante_dospuntos"
                android:textColor="@color/gris_oscuro"
                android:textSize="29sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_weight="1.3"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|center_horizontal|center_vertical"
                android:layout_gravity="top|center_horizontal|center_vertical" >

                <TextView
                    android:id="@+id/txt_count_time_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_vertical"
                    android:gravity="top|center_vertical"
                    android:text="00:60"
                    android:textColor="@color/gris_oscuro"
                    android:textSize="61sp" />

                <TextView
                    android:id="@+id/txt_seg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_vertical"
                    android:gravity="top|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/seg"
                    android:textColor="@color/gris_oscuro"
                    android:textSize="41sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="visible" >

            <Button
                android:id="@+id/but_reproducir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button_selector"
                android:text="Reproducir"
                android:textColor="@color/blanco"
                android:textSize="22dp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_record_audio_espacio_botones"
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:orientation="vertical"
            android:visibility="gone" >

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/but_changepass_enviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button_selector"
                android:clickable="true"
                android:text="@string/grabar"
                android:textAlignment="center"
                android:textSize="22dp"
                android:textColor="@color/blanco" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
